--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="#">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Best Wedding Photographers, Wedding Photography | CandidShutters">
-    <meta property="og:description" content="Hire award winning Indian candid wedding photography, cinematography services. Best wedding photographers in Mumbai, Gurgaon, Delhi NCR">
+    <meta property="og:title" content="Best Wedding Photographers & Dj, Wedding Photography | Jhs">
+    <meta property="og:description" content="Capture your special moments with JHS Photography, offering top-tier candid wedding photography and cinematography in Paris.">
     <meta property="og:url" content="#">
     <meta property="og:site_name" content="CandidShutters">
     <meta property="article:publisher" content="#">
