--- a/index.html
+++ b/index.html
@@ -435,26 +435,36 @@ itemscope="" itemtype="https://schema.org/WebPage">
     
                                 </section>
                                 <section class="elementor-section elementor-top-section elementor-element elementor-element-5d931b2 elementor-section-full_width elementor-section-height-default elementor-section-height-default qodef-elementor-content-no"
-                                data-id="5d931b2" data-element_type="section">
-                                    <div class="elementor-container elementor-column-gap-default">
-                                        <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-0f44c89" data-id="0f44c89" data-element_type="column">
-                                            <div class="elementor-widget-wrap elementor-element-populated">
-                                                <div class="elementor-element elementor-element-fa3f253 elementor-widget elementor-widget-qi_addons_for_elementor_text_marquee" data-id="fa3f253" data-element_type="widget" data-widget_type="qi_addons_for_elementor_text_marquee.default">
-                                                    <div class="elementor-widget-container">
-                                                        <div class="qodef-shortcode qodef-m  qodef-qi-text-marquee qodef-layout--default ">
-                                                            <div class="qodef-m-content">
-                                                                <div class="qodef-m-text qodef-text--original">
-                                                                    <span class="qodef-m-text-item elementor-repeater-item-7cd2c38">Jhs Jhs Jhs</span></div>
-                                                                <div class="qodef-m-text qodef-text--copy">
-                                                                    <span class="qodef-m-text-item elementor-repeater-item-7cd2c38">Jhs Jhs Jhs</span></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
+    data-id="5d931b2" data-element_type="section">
+    <div class="elementor-container elementor-column-gap-default">
+        <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-0f44c89" data-id="0f44c89" data-element_type="column">
+            <div class="elementor-widget-wrap elementor-element-populated">
+                <div class="elementor-element elementor-element-fa3f253 elementor-widget elementor-widget-qi_addons_for_elementor_text_marquee" data-id="fa3f253" data-element_type="widget" data-widget_type="qi_addons_for_elementor_text_marquee.default">
+                    <div class="elementor-widget-container">
+                        <div class="qodef-shortcode qodef-m  qodef-qi-text-marquee qodef-layout--default">
+                            <div class="qodef-m-content">
+                                <div class="qodef-m-text qodef-text--original">
+                                    <span class="qodef-m-text-item elementor-repeater-item-7cd2c38">Jhs Jhs Jhs</span>
+                                </div>
+                                <div class="qodef-m-text qodef-text--copy">
+                                    <span class="qodef-m-text-item elementor-repeater-item-7cd2c38">Jhs Jhs Jhs</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<style>
+    /* Change the text color with !important to force it */
+    .qodef-m-text-item {
+        color: #d5b1be !important; /* Change this color to your preferred color */
+    }
+</style>
+
                                 <section class="elementor-section elementor-top-section elementor-element elementor-element-db1703e qodef-elementor-content-grid elementor-section-boxed elementor-section-height-default elementor-section-height-default"
                                 data-id="db1703e" data-element_type="section" data-settings='{" background_background ":"classic "}'>
                                     <div class="elementor-container elementor-column-gap-default">
