danzia link set

--- a/index.html
+++ b/index.html
@@ -2103,11 +2103,11 @@ z"></path>
                                         </svg>
                                          
                                 </div> -->
-                            </div>
+                            <!-- </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div id="qodef-page-footer-bottom-area">
                 <div id="qodef-page-footer-bottom-area-inner" class="qodef-content-full-width">
                     <div class="qodef-grid qodef-layout--columns qodef-responsive--custom qodef-col-num--1 qodef-gutter--normal qodef-alignment--center">
