fix: image change

--- a/index.html
+++ b/index.html
@@ -1179,8 +1179,8 @@ Videos produced</h4>
                                                 <div class="elementor-element elementor-element-21edc13a elementor-widget elementor-widget-image" data-id="21edc13a" data-element_type="widget" data-widget_type="image.default">
                                                     <div class="elementor-widget-container">
                                                         <img data-lazyloaded="1" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3MzMiIGhlaWdodD0iMTEwMCIgdmlld0JveD0iMCAwIDczMyAxMTAwIj48cmVjdCB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiBzdHlsZT0iZmlsbDojY2ZkNGRiO2ZpbGwtb3BhY2l0eTogMC4xOyIvPjwvc3ZnPg=="
-                                                        loading="lazy" decoding="async" width="733" height="1100" data-src="https://i.imghippo.com/files/mQ4419FK.png" class="attachment-full size-full wp-image-12215"
-                                                        alt="pre wedding shoot of indian couple in lavassa" data-srcset="https://i.imghippo.com/files/mQ4419FK.png"
+                                                        loading="lazy" decoding="async" width="733" height="1100" data-src="/images/couple.png" class="attachment-full size-full wp-image-12215"
+                                                        alt="pre wedding shoot of indian couple in lavassa" data-srcset="/images/couple.png"
                                                         data-sizes="(max-width: 733px) 100vw, 733px"></div>
                                                 </div>
                                             </div>
